[gd_scene load_steps=36 format=2]

[ext_resource path="res://src/menu_system/main_menu/StartGame/NewGameMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Montserratt_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Player/Character/Boy/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Character/Boy/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Character/Boy/Idle (3).png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Character/Boy/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Character/Boy/Idle (5).png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Character/Boy/Idle (6).png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Character/Boy/Idle (7).png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Character/Boy/Idle (8).png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Character/Boy/Idle (9).png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Character/Boy/Idle (10).png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Character/Boy/Idle (11).png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Character/Boy/Idle (12).png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Character/Boy/Idle (13).png" type="Texture" id=15]
[ext_resource path="res://assets/Player/Character/Boy/Idle (14).png" type="Texture" id=16]
[ext_resource path="res://assets/Player/Character/Boy/Idle (15).png" type="Texture" id=17]
[ext_resource path="res://assets/Player/Character/Girl/Idle (1).png" type="Texture" id=18]
[ext_resource path="res://assets/Player/Character/Girl/Idle (2).png" type="Texture" id=19]
[ext_resource path="res://assets/Player/Character/Girl/Idle (3).png" type="Texture" id=20]
[ext_resource path="res://assets/Player/Character/Girl/Idle (4).png" type="Texture" id=21]
[ext_resource path="res://assets/Player/Character/Girl/Idle (5).png" type="Texture" id=22]
[ext_resource path="res://assets/Player/Character/Girl/Idle (6).png" type="Texture" id=23]
[ext_resource path="res://assets/Player/Character/Girl/Idle (7).png" type="Texture" id=24]
[ext_resource path="res://assets/Player/Character/Girl/Idle (8).png" type="Texture" id=25]
[ext_resource path="res://assets/Player/Character/Girl/Idle (9).png" type="Texture" id=26]
[ext_resource path="res://assets/Player/Character/Girl/Idle (10).png" type="Texture" id=27]
[ext_resource path="res://assets/Player/Character/Girl/Idle (11).png" type="Texture" id=28]
[ext_resource path="res://assets/Player/Character/Girl/Idle (12).png" type="Texture" id=29]
[ext_resource path="res://assets/Player/Character/Girl/Idle (13).png" type="Texture" id=30]
[ext_resource path="res://assets/Player/Character/Girl/Idle (14).png" type="Texture" id=31]
[ext_resource path="res://assets/Player/Character/Girl/Idle (15).png" type="Texture" id=32]
[ext_resource path="res://assets/Player/Character/Girl/Idle (16).png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Idle",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
} ]

[node name="NewGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 2.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1180.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Choose a character"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 1180.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BoySprite" type="AnimatedSprite" parent="VBoxContainer/HBoxContainer"]
position = Vector2( 464.335, 333.77 )
frames = SubResource( 3 )
animation = "Idle"
frame = 5
playing = true

[node name="BoyButton" type="Button" parent="VBoxContainer/HBoxContainer/BoySprite"]
margin_left = -299.0
margin_top = -256.0
margin_right = -6.0
margin_bottom = 223.0
flat = true

[node name="GirlSprite" type="AnimatedSprite" parent="VBoxContainer/HBoxContainer"]
position = Vector2( 846.316, 329.65 )
frames = SubResource( 2 )
animation = "idle"
frame = 7
playing = true

[node name="GirlButton" type="Button" parent="VBoxContainer/HBoxContainer/GirlSprite"]
margin_left = -143.0
margin_top = -212.0
margin_right = 166.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="Chosen character text" type="Label" parent="VBoxContainer"]
margin_top = 628.0
margin_right = 1180.0
margin_bottom = 649.0
custom_fonts/font = ExtResource( 2 )
text = "You have chosen: Boy"
align = 1

[node name="ButtonBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 653.0
margin_right = 1180.0
margin_bottom = 680.0
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ButtonBoxContainer"]
margin_right = 588.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackToMainMenuButton" type="Button" parent="VBoxContainer/ButtonBoxContainer/CenterContainer"]
margin_left = 266.0
margin_right = 321.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/ButtonBoxContainer"]
margin_left = 592.0
margin_right = 1180.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="VBoxContainer/ButtonBoxContainer/CenterContainer2"]
margin_left = 240.0
margin_right = 347.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Start Game"
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/BoySprite/BoyButton" to="." method="_on_BoyButton_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/GirlSprite/GirlButton" to="." method="_on_GirlButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonBoxContainer/CenterContainer/BackToMainMenuButton" to="." method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonBoxContainer/CenterContainer2/StartGameButton" to="." method="_on_StartGameButton_pressed"]
